5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4330/executions/1716_2497.log
== TEST (2019-05-09 16:15:59) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 04 - Ex 04
# 20 / 06 / 2016

qi    = int(input("Quantia inicial: "))
tempo = int(input("Tempo de investimento: "))
juros = 4.0
saldo = qi      # Variavel acumuladora

# Valor inicial da variavel contadora
t = 0

# Atualizacao de saldo
while (teste>1):
	rend = saldo * juros
	saldo = saldo + rend
	t = ????

print(round(saldo, 2)) # Exibicao de resultados

	

-- ERROR:
File "XXXX", line 17
    t = ????
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 16:16:00) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 04 - Ex 04
# 20 / 06 / 2016

qi    = int(input("Quantia inicial: "))
tempo = int(input("Tempo de investimento: "))
juros = 4.0
saldo = qi      # Variavel acumuladora

# Valor inicial da variavel contadora
t = 0

# Atualizacao de saldo
while (teste>1):
	rend = saldo * juros
	saldo = saldo + rend
	t = ????

print(round(saldo, 2)) # Exibicao de resultados

	

-- ERROR:
File "XXXX", line 17
    t = ????
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 16:16:00) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 04 - Ex 04
# 20 / 06 / 2016

qi    = int(input("Quantia inicial: "))
tempo = int(input("Tempo de investimento: "))
juros = 4.0
saldo = qi      # Variavel acumuladora

# Valor inicial da variavel contadora
t = 0

# Atualizacao de saldo
while (teste>1):
	rend = saldo * juros
	saldo = saldo + rend
	t = ????

print(round(saldo, 2)) # Exibicao de resultados

	

-- ERROR:
File "XXXX", line 17
    t = ????
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 16:25:22) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 04 - Ex 04
# 20 / 06 / 2016

qi    = float(input("Quantia inicial: "))
tempo = int(input("Tempo de investimento: "))
juros = 4.0
saldo = qi      # Variavel acumuladora

# Valor inicial da variavel contadora
t = 0

# Atualizacao de saldo
while (teste => 1):
	rend = saldo * juros
	saldo = saldo + rend
	t = saldo

print(round(saldo, 2)) # Exibicao de resultados

	

-- ERROR:
File "XXXX", line 14
    while (teste => 1):
                 ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 16:26:55) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 04 - Ex 04
# 20 / 06 / 2016

qi    = float(input("Quantia inicial: "))
tempo = int(input("Tempo de investimento: "))
juros = 4.0
saldo = qi      # Variavel acumuladora

# Valor inicial da variavel contadora
t = 0

# Atualizacao de saldo
while ( q1 => 1):
	rend = saldo * juros - t
	saldo = saldo + rend
	t = saldo

print(round(saldo, 2)) # Exibicao de resultados

	

-- ERROR:
File "XXXX", line 14
    while ( q1 => 1):
               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 16:26:56) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 04 - Ex 04
# 20 / 06 / 2016

qi    = float(input("Quantia inicial: "))
tempo = int(input("Tempo de investimento: "))
juros = 4.0
saldo = qi      # Variavel acumuladora

# Valor inicial da variavel contadora
t = 0

# Atualizacao de saldo
while ( q1 => 1):
	rend = saldo * juros - t
	saldo = saldo + rend
	t = saldo

print(round(saldo, 2)) # Exibicao de resultados

	

-- ERROR:
File "XXXX", line 14
    while ( q1 => 1):
               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 16:26:57) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 04 - Ex 04
# 20 / 06 / 2016

qi    = float(input("Quantia inicial: "))
tempo = int(input("Tempo de investimento: "))
juros = 4.0
saldo = qi      # Variavel acumuladora

# Valor inicial da variavel contadora
t = 0

# Atualizacao de saldo
while ( q1 => 1):
	rend = saldo * juros - t
	saldo = saldo + rend
	t = saldo

print(round(saldo, 2)) # Exibicao de resultados

	

-- ERROR:
File "XXXX", line 14
    while ( q1 => 1):
               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 16:27:06) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 04 - Ex 04
# 20 / 06 / 2016

qi    = float(input("Quantia inicial: "))
tempo = int(input("Tempo de investimento: "))
juros = 4.0
saldo = qi      # Variavel acumuladora

# Valor inicial da variavel contadora
t = 0

# Atualizacao de saldo
	while ( q1 => 1):
	rend = saldo * juros - t
	saldo = saldo + rend
	t = saldo

print(round(saldo, 2)) # Exibicao de resultados

	

-- ERROR:
File "XXXX", line 14
    while ( q1 => 1):
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 16:27:07) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 04 - Ex 04
# 20 / 06 / 2016

qi    = float(input("Quantia inicial: "))
tempo = int(input("Tempo de investimento: "))
juros = 4.0
saldo = qi      # Variavel acumuladora

# Valor inicial da variavel contadora
t = 0

# Atualizacao de saldo
	while ( q1 => 1):
	rend = saldo * juros - t
	saldo = saldo + rend
	t = saldo

print(round(saldo, 2)) # Exibicao de resultados

	

-- ERROR:
File "XXXX", line 14
    while ( q1 => 1):
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 16:27:17) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 04 - Ex 04
# 20 / 06 / 2016

qi    = float(input("Quantia inicial: "))
tempo = int(input("Tempo de investimento: "))
juros = 4.0
saldo = qi      # Variavel acumuladora

# Valor inicial da variavel contadora
t = 0

# Atualizacao de saldo
while ( q1 >= 1):
	rend = saldo * juros - t
	saldo = saldo + rend
	t = saldo

print(round(saldo, 2)) # Exibicao de resultados

	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 14, in <module>
    while ( q1 >= 1):
NameError: name 'q1' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 16:27:59) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 04 - Ex 04
# 20 / 06 / 2016

qi    = float(input("Quantia inicial: "))
tempo = int(input("Tempo de investimento: "))
juros = 4.0
saldo = qi      # Variavel acumuladora

# Valor inicial da variavel contadora
t = 0

# Atualizacao de saldo
while ( qi >= 1):
	rend = saldo * juros - t
	saldo = saldo + rend
	t = saldo

print(round(saldo, 2)) # Exibicao de resultados

	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 14, in <module>
    while ( q1 >= 1):
NameError: name 'q1' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 16:28:43) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 04 - Ex 04
# 20 / 06 / 2016

qi    = float(input("Quantia inicial: "))
tempo = int(input("Tempo de investimento: "))
juros = 4.0
saldo = qi      # Variavel acumuladora

# Valor inicial da variavel contadora
t = 0

# Atualizacao de saldo
while ( qi >= 1):
	rend = saldo * juros - qi
	saldo = saldo + rend
	t = qi

print(round(saldo, 2)) # Exibicao de resultados

	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 14, in <module>
    while ( q1 >= 1):
NameError: name 'q1' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-09 17:35:06) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 04 - Ex 04
# 20 / 06 / 2016

Valor   = float(input("Quantia inicial: "))
Mes = int(input("Tempo de investimento: "))
Tempo = 0
while(Tempo < Mes):
		Lucro = Valor * 0.04
		Valor = Valor + Lucro
		Tempo = Tempo + 1
		print(round(Valor, 2))


-- EXECUTION TIME:
0.194999
-- TEST CASE 1:
---- input:
575.25
6
---- correct output:
598.26
622.19
647.08
672.96
699.88
727.87
---- user output:
598.26
622.19
647.08
672.96
699.88
727.87
-- TEST CASE 2:
---- input:
825.4
3

---- correct output:
858.42
892.75
928.46
---- user output:
858.42
892.75
928.46
-- TEST CASE 3:
---- input:
1275.65
5
---- correct output:
1326.68
1379.74
1434.93
1492.33
1552.02
---- user output:
1326.68
1379.74
1434.93
1492.33
1552.02
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-11 22:41:19) 
-- CODE:
Valor   = float(input("Quantia inicial: "))
Mes = int(input("Tempo de investimento: "))
Tempo = 0
while(Tempo < Mes):
		Lucro = Valor * 0.04
		Valor = Valor + Lucro
		Tempo = Tempo + 1
		print(round(Valor, 2))

-- EXECUTION TIME:
0.16757
-- TEST CASE 1:
---- input:
575.25
6
---- correct output:
598.26
622.19
647.08
672.96
699.88
727.87
---- user output:
598.26
622.19
647.08
672.96
699.88
727.87
-- TEST CASE 2:
---- input:
825.4
3

---- correct output:
858.42
892.75
928.46
---- user output:
858.42
892.75
928.46
-- TEST CASE 3:
---- input:
1275.65
5
---- correct output:
1326.68
1379.74
1434.93
1492.33
1552.02
---- user output:
1326.68
1379.74
1434.93
1492.33
1552.02
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-11 22:45:17) 
-- CODE:
V=float(input("Valor: "))
QMA=int(input("Tempo de investimento(quantidade de meses de aplicacao): "))
Tempo = 0
while( Tempo < QMA ):
		Lucro = V * 0.04
		V = V + Lucro
		Tempo = Tempo + 1
		print(round(Valor, 2))

-- EXECUTION TIME:
0.174326
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1716/2497/main.py", line 8, in <module>
    print(round(Valor, 2))
NameError: name 'Valor' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-11 22:45:19) 
-- CODE:
V=float(input("Valor: "))
QMA=int(input("Tempo de investimento(quantidade de meses de aplicacao): "))
Tempo = 0
while( Tempo < QMA ):
		Lucro = V * 0.04
		V = V + Lucro
		Tempo = Tempo + 1
		print(round(Valor, 2))

-- EXECUTION TIME:
0.143226
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1716/2497/main.py", line 8, in <module>
    print(round(Valor, 2))
NameError: name 'Valor' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-11 22:45:28) 
-- CODE:
V=float(input("Valor: "))
QMA=int(input("Tempo de investimento(quantidade de meses de aplicacao): "))
Tempo = 0
while( Tempo < QMA ):
		Lucro = V * 0.04
		V = V + Lucro
		Tempo = Tempo + 1
		print(round(V, 2))

-- EXECUTION TIME:
0.143986
-- TEST CASE 1:
---- input:
575.25
6
---- correct output:
598.26
622.19
647.08
672.96
699.88
727.87
---- user output:
598.26
622.19
647.08
672.96
699.88
727.87
-- TEST CASE 2:
---- input:
825.4
3

---- correct output:
858.42
892.75
928.46
---- user output:
858.42
892.75
928.46
-- TEST CASE 3:
---- input:
1275.65
5
---- correct output:
1326.68
1379.74
1434.93
1492.33
1552.02
---- user output:
1326.68
1379.74
1434.93
1492.33
1552.02
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-11 22:45:30) 
-- CODE:
V=float(input("Valor: "))
QMA=int(input("Tempo de investimento(quantidade de meses de aplicacao): "))
Tempo = 0
while( Tempo < QMA ):
		Lucro = V * 0.04
		V = V + Lucro
		Tempo = Tempo + 1
		print(round(V, 2))

-- OUTPUT:
598.26
622.19
647.08
672.96
699.88
727.87
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-11 22:45:58) 
-- CODE:
V=float(input("Valor: "))
QMA=int(input("Tempo de investimento(quantidade de meses de aplicacao): "))
Tempo = 0
while( Tempo < QMA ):
		Lucro = V * 0.04
		V = V + Lucro
		Tempo = Tempo + 1
		print(round(V, 2))

-- OUTPUT:
598.26
622.19
647.08
672.96
699.88
727.87
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-11 22:46:09) 
-- CODE:
V=float(input("Valor: "))
QMA=int(input("Tempo de investimento(quantidade de meses de aplicacao): "))
Tempo = 0
while( Tempo < QMA ):
		Lucro = V * 0.04
		V = V + Lucro
		Tempo = Tempo + 1
		print(round(V, 2))

-- OUTPUT:
598.26
622.19
647.08
672.96
699.88
727.87
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-11 22:46:34) 
-- CODE:
V=float(input("Valor: "))
QMA=int(input("Tempo de investimento(quantidade de meses de aplicacao): "))
Tempo = 0
while( Tempo < QMA ):
		Lucro = V * 0.04
		V = V + Lucro
		Tempo = Tempo + 1
		print(round(V, 2))

-- OUTPUT:
598.26
622.19
647.08
672.96
699.88
727.87
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 13:32:58) 
-- CODE:
V=float(input("Valor: "))
QMA=int(input("Tempo de investimento(quantidade de meses de aplicacao): "))
Tempo = 0
while( Tempo < QMA ):
		Lucro = V * 0.04
		V = V + Lucro
		Tempo = Tempo + 1
		print(round(V, 2))

-- OUTPUT:
598.26
622.19
647.08
672.96
699.88
727.87
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
